--- a/mainmenu/style.css
+++ b/mainmenu/style.css
@@ -35,7 +35,7 @@ button {
     border: none;
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
+    transition: all 0.3s ease;
     height: 30%;
     width: 200%;
     cursor: pointer;
