--- a/mainmenu/style.css
+++ b/mainmenu/style.css
@@ -35,7 +35,6 @@ button {
     border: none;
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
     height: 30%;
     width: 200%;
     cursor: pointer;
@@ -54,15 +53,14 @@ button {
 }
 
 button:hover {
-    background-color: #FFD70080;
-    -webkit-backdrop-filter: brightness(1.2);
-    box-shadow: 0px 15px 20px rgba(66, 66, 66, 0.4);
+    background-color: rgba(255, 217, 0, 0.6);
+    -webkit-backdrop-filter: blur(10px) brightness(1.2);
     color: #fff;
     backdrop-filter: blur(10px) brightness(1.2);
 }
 
 button:active {
-    transform: translateY(1%) translateX(-50%);
+    transform: translateY(3%) translateX(-50%);
 }
 
 .box {
