--- a/mainmenu/style.css
+++ b/mainmenu/style.css
@@ -50,17 +50,16 @@ button {
     /* Internet Explorer/Edge */
     user-select: none;
     /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+    transition: transform 0.2s ease;
 }
 
 button:hover {
-    background-color: rgba(255, 217, 0, 0.6);
-    -webkit-backdrop-filter: blur(10px) brightness(1.2);
-    color: #fff;
-    backdrop-filter: blur(10px) brightness(1.2);
+    transform: translateX(-50%) scale(1.1);
 }
 
 button:active {
-    transform: translateY(3%) translateX(-50%);
+    transform: translateY(5%) translateX(-50%) scale(1.1);
+    transition: none;
 }
 
 .box {
@@ -73,7 +72,6 @@ button:active {
     border-radius: 100px;
     -webkit-backdrop-filter: blue(10px);
     backdrop-filter: blur(10px) brightness(1.2);
-    transition: all 1s;
 }
 
 @media only screen and (max-width: 900px) and (max-device-width: 900px) {
